# report_tool

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  deploy.bat  deploy.ps1  deploy.sh  main.py  migrate_to_mysql.py  preview_test.html  pyproject.toml  requirements.txt  比亚迪规划院安全运营日报-2026年5月20日.docx  项目实施计划.md
.claude/: settings.local.json
app/: auth.py  config.py  db.py  main.py  security.py
app/routers/: admin.py  api.py  auth.py  daily_report.py  web.py
app/services/: daily_report_ai.py  docx_generator.py  email_service.py  email_template.html  inventory.py  ip_query.py  llm_settings.py  spreadsheets.py  system_update.py
app/static/: app.css
app/static/import-templates/: 暂不安装主机导入模板.xlsx  未配额主机导入模板.xlsx  项目负责人导入模板.xlsx
app/static/react/: index.html
app/static/react/assets/: index-B7Bw52kC.js  index-BEWUhlcS.css  index-BK8Rykwe.js  index-Bo10hVCV.js  index-BsFBRhIe.js  index-C35NYBKb.css  index-CDcXK6qN.js  index-Cl4sVC1g.js  (+6 more)
app/static/report-templates/: daily-report-template.docx
app/templates/: admin_dataset.html  app_shell.html  base.html  change_password.html  daily_report_form.html  daily_report_import.html  daily_report_llm_settings.html  daily_report_operators.html  daily_report_preview.html  dashboard.html  history.html  login.html
docs/superpowers/plans/: 2026-06-12-ip-query-tool.md
docs/superpowers/specs/: 2026-06-12-ip-query-tool-design.md
frontend/src/: App.tsx
scripts/: build_daily_report_template.py  clean_placeholders.py  import_docx_report.py
tests/: test_daily_report.py  test_daily_report_ai.py  test_inventory_generation.py
(+6 files in other folders)
